--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-# Portfolio-
+<! DOCTYPE html>
+<html lang=eng>
+<head>
+  <header>
+<tittle align="Left">Welcome To Parth Sharma Portfolio</tittle>
+  <p align="right">
+<a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
+<a href="https://www.instagram.com/parth_sankhyan/">Instagran</a>
+<a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
+<a href="parthsankhyanofficial@gmail.com">MailMe</a>
+</p>
+  </header>
+</head> 
+  <body>
+ <h1 align= "center"> Parth Sharma </h1>
+  <h4 align="left">  Education </h4>
+  <p> <a href="https://gpkinnaur.edu.in/" target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"> </a> </p>
+<h4 align="left"> Practical Knowledge </h4>
+ <img align="center">  src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/logo-1.jpg"                                
+ <p> 3weeks Industrial Training At  HPPWD Office Sundernagar Distt Mandi Himachal Pradesh </p>                                                        
+<h4 align=left> Skills </h4>
+  <p><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/20241230_220948.png"</p>
+  <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernagar> </a> </p>
+    <footer>
+    <p>Made By Parth Sharma All Rights Reserved 2025</p>
+    </footer>
+  </body>
+</html>
