--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head> 
   <body>
  <h1 align= "center"> Parth Sharma </h1>
-  <h4 align="left">  Education </h4>
+  <h4 align="left">Education </h4>
   <p> <a href="https://gpkinnaur.edu.in/" target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"> </a> </p>
+   <p> Done Diploma In Civil Engineering<p/>
 <h4 align="left"> Practical Knowledge </h4>
- <img align="center">  src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/logo-1.jpg"                                
+ <img align="center"src="/https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/logo-1.jpg">                              
  <p> 3weeks Industrial Training At  HPPWD Office Sundernagar Distt Mandi Himachal Pradesh </p>                                                        
 <h4 align=left> Skills </h4>
   <p><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/20241230_220948.png"</p>
