--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <p> 3weeks Industrial Training At  HPPWD Office Sundernagar Distt Mandi Himachal Pradesh </p>                                                        
 <h4 align=left> Skills </h4>
   <p><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/20241230_220948.png"</p>
-  <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernagar> </a> </p>
+  <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <footer>
     <p>Made By Parth Sharma All Rights Reserved 2025</p>
     </footer>
