--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4 align="left">Practical Knowledge </h4>
- <img align="center"src="/https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/logo-1.jpg">                              
+ <img align="center"src="/Images/logo-1.jpg">                              
  <p> 3weeks Industrial Training At  HPPWD Office Sundernagar Distt Mandi Himachal Pradesh 
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
