--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
 <a href="https://www.instagram.com/parth_sankhyan/">Instagran</a>
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
-<a href="parthsankhyanofficial@gmail.com">MailMe</a>
+<a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a>
 </p>
   </header>
 </head> 
