--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <p> Done Diploma In Civil Engineering<p/>
 <h4 align="left">Practical Knowledge </h4>
  <img align="center"src="/Images/logo-1.jpg">                              
- <p> 3weeks Industrial Training At  HPPWD Office Sundernagar Distt Mandi Himachal Pradesh 
+ <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar"> </a>Sundernagar Distt Mandi Himachal Pradesh 
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
   <p><img align="center"src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/20241230_220948.png"</p>
