--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 </head> 
   <body>
- <h1 align= "center" Style=Colour"Blue"> Parth Sharma </h1>
+ <h1 align= "center"> Parth Sharma </h1>
     <img src="https://github.com/ParthSankhyan/Portfolio-/commit/25c8e63da152ed219008831f440ef5adfbb87ac3"alt="Right">
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
