--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </header>
 </head> 
   <body>
- <h1 align= "center";Style=colour"Blue";> Parth Sharma </h1>
+ <h1 align= "center"> Parth Sharma </h1>
     <img src="https://github.com/ParthSankhyan/Portfolio-/commit/25c8e63da152ed219008831f440ef5adfbb87ac3"alt="Right">
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
-<h4 align="left">Practical Knowledge </h4>
+<h4 style=Colour:"Blue">Practical Knowledge </h4>
  <img align="center"src="/Images/logo-1.jpg">                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar"> </a>Sundernagar Distt Mandi Himachal Pradesh 
  From 06-01-2024 To 25-01-2024</p>                                                        
