--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
-    <img src="https://github.com/ParthSankhyan/Portfolio-/commit/25c8e63da152ed219008831f440ef5adfbb87ac3"alt="Right">
+    <img src=""alt="Right">
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
