--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
-<a href="https://gpkinnaur.edu.in" target="_blank"><img src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png" alt=style="width:300px;">
+<a href="https://gpkinnaur.edu.in" target="_blank"><img src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png">
 </a>                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar"> </a>Sundernagar Distt Mandi Himachal Pradesh 
  From 06-01-2024 To 25-01-2024</p>                                                        
