--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
-<a href="https://gpkinnaur.edu.in" target="_blank"><img src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png">
+<a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png">
 </a>                              
- <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar"> </a>Sundernagar Distt Mandi Himachal Pradesh 
+ <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
   <p><img align="center"src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/20241230_220948.png"</p>
