--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
     <img src=""alt="Right">
-  <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="https://github.com/ParthSankhyan/Portfolio-/blob/main/Images/ZcoGcFY9_400x400.png"></a></p>
+  <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
 <a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png">
