--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
-    <img src=""alt="Right">
-  <p><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"></a></p>
+    <img src="parthsankhyan.png"align="Right">
+  <p align center><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
 <a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png">
