--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head> 
   <body>
  <h1 align= "center"> Parth Sharma </h1>
+  <p align right><img src="parthsankhyan.png></p>
     <h4>Education</h4>
-    <img src="parthsankhyan.png"align="Right">
-  <p align center><a href="https://gpkinnaur.edu.in/"target="blank"><img align="center" src="gpk.png"></a></p>
+  <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
 <a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png">
@@ -23,10 +23,10 @@
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
-  <p><img align="center"src="msexcel50*50.png"</p>
+  <p><img align="center"src="msexcel.png"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-    <footer>
+    <section class="footer">
     <p>Made By Parth Sharma All Rights Reserved 2025</p>
-    </footer>
+    </section>
   </body>
 </html>
