--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <p><img align="center"src="msexcel.png"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <section class="footer">
+      <div class="footer-content">
     <p>Made By Parth Sharma All Rights Reserved 2025</p>
+        </div>
     </section>
   </body>
 </html>
