--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </header>
 </head> 
   <body>
+    <p align right><img src="parthsankhyan.png"></p>
  <h1 align= "center"> Parth Sharma </h1>
-  <p align right><img src="parthsankhyan.png></p>
     <h4>Education</h4>
   <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
