--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
-  <p><img align="center"src="msexcel.png"</p>
+  <p><img align="center"src="msexcel.png" width="300" height="200"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <section class="footer">
       <div class="footer-content">
