--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 </head> 
   <body>
-    <p align right><img src="parthsankhyan.png"></p>
+    <p align right><img src="parthsankhyan.png" width="400" height="400"></p>
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
   <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"></a></p>
@@ -23,7 +23,7 @@
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
-  <p align centre><img align="center"src="msexcel.png" width="300" height="200"</p>
+  <p align centre><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <section class="footer">
       <div class="footer-content">
