--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
-<p align="centre"><a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png"> </p>
+<p align="center"><a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
-  <p align="centre"><img align="center"src="msexcel.png" width="400" height="400"</p>
+  <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <section class="footer">
       <div class="footer-content">
-    <p>Made By Parth Sharma All Rights Reserved 2025</p>
+    <p align="center">Made By Parth Sharma All Rights Reserved 2025</p>
         </div>
     </section>
   </body>
