--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <h1 align= "center"> Parth Sharma </h1>
     <p align="right"><img src="parthsankhyan.png" width="400" height="400"></p>
     <h4>Education</h4>
-  <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"></a></p>
+  <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
 <p align="center"><a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png"> </p>
