--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
     <section class="footer">
       <div class="footer-content">
-    <p align="center" Style="background-colour:Black;colour:white";> <b>Made By Parth Sharma All Rights Reserved 2025</b></p>
+    <p align="center" Style="background-colour:Black;colour:white;"> <b>Made By Parth Sharma All Rights Reserved 2025</b></p>
         </div>
     </section>
   </body>
