--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-    <section class="footer">
-      <div class="footer-content">
-    <p align="center" Style="background-colour:Black;colour:white;"> <b>Made By Parth Sharma All Rights Reserved 2025</b></p>
-        </div>
-    </section>
+    <p align="center"style="background-colour:Black;colour:white;"> <b>Made By Parth Sharma All Rights Reserved 2025</b></p
   </body>
 </html>
