--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-    <p align="center"style="background-colour:Black; colour:white;"><b>Made By Parth Sharma All Rights Reserved 2025</b></p
+    <p align="center"style="background-colour:Black; colour:white;">Made By Parth Sharma All Rights Reserved 2025</p
   </body>
 </html>
