--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-    <p style="color: white;background-color: Black;">Made By Parth Sharma All Rights Reserved 2025</p>
+   
+  <p style="color: White; background-color: Black;"></p>
   </body>
 </html>
