--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p style="color: White; background-color: Black;"></p>
+  <p style="color: White; background-color: Black;"> Made By Parth Sharma All Rights Reserved 2025</p>
   </body>
 </html>
