--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head> 
   <body>
  <h1 align= "center"> Parth Sharma </h1>
-    <p align="right"><img src="parthsankhyan.png" width="400" height="400"></p>
-    <h4>Education</h4>
+    
   <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
@@ -26,7 +25,8 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p style="color: White; background-color: Black;"><b> mail me at parthsankhyanofficial@gmail.com
-    Made By Parth Sharma All Rights Reserved 2025</b></p>
+  <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
+    Made By Parth Sharma All Rights Reserved 2025</b>align="right"><img src="parthsankhyan.png" width="1000 height="1000>
+    <h4>Education</h4</p>
   </body>
 </html>
