--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head> 
   <body>
  <h1 align= "center"> Parth Sharma </h1>
-    
+    <h4>Education</h4>
   <p align center><a href="https://gpkinnaur.edu.in"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
@@ -26,7 +26,7 @@
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
-    Made By Parth Sharma All Rights Reserved 2025</b>align="right"><img src="parthsankhyan.png" width="1000 height="1000>
+    Made By Parth Sharma All Rights Reserved 2025</b>align="right"><img src="parthsankhyan.png" width="150px" height="1000">
     <h4>Education</h4</p>
   </body>
 </html>
