--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
-    Made By Parth Sharma All Rights Reserved 2025</b><img src="parthsankhyan.png" width="150px" height="1000" </p>
+    Made By Parth Sharma All Rights Reserved 2025</b><img src="parthsankhyan.png" width="150px" height="Auto" </p>
   </body>
 </html>
