--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
-    Made By Parth Sharma All Rights Reserved 2025</b><img src="parthsankhyan.png" width="150px" height="Auto" </p>
+  <p align centre style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
+    Made By Parth Sharma All Rights Reserved 2025</b><img src="parthsankhyan.png" width="200px" height="Auto" </p>
   </body>
 </html>
