--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    
   <p " style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
     Made By Parth Sharma All Rights Reserved 2025</b>
-    align="centre<img src="parthsankhyan.png" width="250" height="Auto" </p>
+    align </p>
+    <p><img src="parthsankhyan.png" width="250" height="Auto"</p>
   </body>
 </html>
