--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p " style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
+  <p>style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
     Made By Parth Sharma All Rights Reserved 2025 </b> </p>
-    <p> <img src="parthsankhyan.png"width="250"height="Auto"</p>
+     <img src="parthsankhyan.png"width="250"height="Auto"
   </body>
 </html>
