--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p>style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
-    Made By Parth Sharma All Rights Reserved 2025 </b> </p>
-     <img src="parthsankhyan.png"width="250"height="Auto">
+       Made By Parth Sharma All Rights Reserved 2025 </b> 
+     <img src="parthsankhyan.png"width="250"height="Auto"></p>
   </body>
 </html>
