--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
        Made By Parth Sharma All Rights Reserved 2025 </b> 
      <img src="parthsankhyan.png"width="250"height="Auto"> 
-    Thanks For Visiting My Website...Parth Sharma</p>
+    Thanks For Visiting My Website...Parth</p>
   </body>
 </html>
