--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p align center><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
    <p> Done Diploma In Civil Engineering<p/>
 <h4>Practical Knowledge </h4>
-<p align= "center"><a href="https://gpkinnaur.edu.in" target="_blank"><img src="hppwd.png"> </p>
+<p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024</p>                                                        
