--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
 <a href="https://www.instagram.com/parth_sankhyan/">Instagran</a>
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
-<a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a>
 </p>
   </header>
 </head> 
@@ -25,7 +24,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p style="color: White; background-color: Black;"><b> Mail me at parthsankhyanofficial@gmail.com
+  <p style="color: White; background-color: Black;"><b> <a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a>
        Made By Parth Sharma All Rights Reserved 2025 </b> 
      <img src="parthsankhyan.png"width="250"height="Auto"> 
     Thanks For Visiting My Website...Parth</p>
