--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;"><b> <a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a>
-       Made By Parth Sharma All Rights Reserved 2025 </b> 
-     <img src="parthsankhyan.png"width="250"height="Auto"> 
-    Thanks For Visiting My Website...Parth</p>
+       Made By Parth Sharma All Rights Reserved 2025 </b> <br>
+     <img src="parthsankhyan.png"width="250"height="Auto"> <br>
+    Thanks For Visiting My Website...Parth Sharma</p>
   </body>
 </html>
