--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
-  <p style="color: White; background-color: Black;"><b> <a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a>
+  <p style="color: White; background-color: Black;"><b> <a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a><br>
        Made By Parth Sharma All Rights Reserved 2025 </b> <br>
      <img src="parthsankhyan.png"width="250"height="Auto"> <br>
     Thanks For Visiting My Website...Parth Sharma</p>
