--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <header>
 <tittle align="Left">Welcome To Parth Sharma Portfolio</tittle>
   <p align="right">
+    <div class="social-links">
 <a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
 <a href="https://www.instagram.com/parth_sankhyan/">Instagran</a>
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
+ </div>
 </p>
   </header>
 </head> 
