--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
   <p align center><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
-   <p> Done Diploma In Civil Engineering<p/>
+   <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla (H.P
+    )<p/>
 <h4>Practical Knowledge </h4>
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
@@ -24,7 +25,7 @@
  From 06-01-2024 To 25-01-2024</p>                                                        
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
-  <p align="left"> Done Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
+  <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;"><b> <a href="https://mail.google.com/mail/u/0/?fs=1&to=parthsankhyanofficial@gmail.com&su&body&tf=cm">MailMe</a><br>
        Made By Parth Sharma All Rights Reserved 2025 </b> <br>
