--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
   <p align center><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
-   <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla (H.P
-    )<p/>
+   <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h4>Practical Knowledge </h4>
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
