--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=eng>
 <head>
   <header>
-<tittle align="Left">Welcome To Parth Sharma Portfolio</tittle>
+<tittle align="Left">Welcome To Parth Sharma Portfolio Website</tittle>
   <p align="right">
     <div class="social-links">
 <a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
