--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   
    </footer>
   
-    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button>
+<p align="right">    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button></p>
   </body>
 </html>
