--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    <footer>
-  <p>Copyright © 2025 Parth Sharma</p>
-  
+  <pstyle="colour: white background -color Black;">>Copyright © 2025 Parth Sharma,All Rights Reserved<br> Thanks For Visiting My Website...Parth Sharma</p>
    </footer>
   
 <p align="right">    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button></p>
