--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-   <footer>
-  <p style="colour: white background -color Black;">>Copyright © 2025 Parth Sharma,All Rights Reserved<br> Thanks For Visiting My Website...Parth Sharma</p>
-   </footer>
+  <p style="colour: white background -color Black;">Copyright © 2025 Parth Sharma,All Rights Reserved<br> Thanks For Visiting My Website...Parth Sharma</p>
   
 <p align="right">    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button></p>
   </body>
