--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <header>
 <tittle align="Left">Welcome To Parth Sharma Portfolio Website</tittle>
   <p align="right">
-    <div class="social-links">
-<a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336">LinkedIn</a>
-<a href="https://www.instagram.com/parth_sankhyan/">Instagran</a>
+    ">
+<a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png"> 
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png"> 
+</a>  
+<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png">
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
  </div>
 </p>
@@ -25,8 +27,9 @@
 <h4 align=left> Skills </h4>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-  <p style="colour: white background-colour Black;">Copyright © 2025 Parth Sharma,All Rights Reserved<br> Thanks For Visiting My Website...Parth Sharma</p>
-  
-<p align="right">    <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button></p>
+   
+  <p style="color: White; background-color: Black;">
+       Made By Parth Sharma All Rights Reserved 2025 </b> <br>
+    Thanks For Visiting My Website...Parth Sharma</p>
   </body>
 </html>
