--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <tittle align="Left">Welcome To Parth Sharma Portfolio Website</tittle>
   <p align="right">
     ">
-<a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png"> 
- <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png"> 
-</a>  
-<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png">
+<a href="https://in.linkedin.com/in/parth-sankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png"width=" 24" height="24"> 
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="24" height="24"
+</a> 
+<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png"width="24" height="24">
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
  </div>
 </p>
