--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <header>
 <tittle align="Left">Welcome To Parth Sharma Portfolio Website</tittle>
   <p align="right">
-<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="Linkedn.png"width=" 24" height="24"> 
+<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png
+                                                                              "width=" 24" height="24"> 
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="24" height="24"
 </a> 
 <a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png"width="24" height="24">
@@ -28,7 +29,7 @@
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;">
-       Made By Parth Sharma All Rights Reserved 2025 </b> <br>
+       Copyright© 2025 All Rights Resirved </b> <br>
     Thanks For Visiting My Website...Parth Sharma</p>
   </body>
 </html>
