--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=eng>
 <head>
   <header>
-<tittle align="Left">Welcome To Parth Sharma Portfolio Website</tittle>
+<tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png
                                                                               "width=" 24" height="24"> 
