--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <header>
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
-<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png
+<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png> </a>
                                                                               "width=" 24" height="24"> 
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="24" height="24"
 </a> 
-<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png"width="24" height="24">
+<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png" width="24" height="24"></a>
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
  </div>
 </p>
@@ -29,7 +29,8 @@
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;">
-       Copyright© 2025 All Rights Resirved </b> <br>
-    Thanks For Visiting My Website...Parth Sharma</p>
+    <b>About </b> Hi I am Parth Sharma . Thanks For Visiting My Website . I am From Bilaspur H.P. <br>
+    Copyright© 2025 All Rights Resirved 
+</p>
   </body>
 </html>
