--- a/index.html
+++ b/index.html
@@ -4,19 +4,10 @@
   <header>
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
-<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width=" 24" height="24"> </a>
- <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="24" height="24"
+<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="50" height="50"> </a>
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50"
 </a> 
-<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png" width="24" height="24"></a>
-<a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7">Resume</a>
- </div>
-</p>
-  </header>
-</head> 
-  <body>
- <h1 align= "center"> Parth Sharma </h1>
-    <h4>Education</h4>
-  <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>
+<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png" width="50" height="50"
    <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h4>Practical Knowledge </h4>
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
