--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
-  <p align="right">
+  <p align="left">
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="200" height="150"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50"
 </a> 
