--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="200" height="150"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50"
 </a> 
-<a href ="https://mail.google.com/mail/?view=cm&fs=1&to=parthsankhyanofficial@gmail.com&su=&body=/target="_blank"><img src="mail.png" width="50" height="50">
+<a href ="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="50" height="50">
   </a>                                                                                                                                                       
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7"><img src="cv.png" width="100" height="100"</a>
 </p>
