--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="left">
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="200" height="150"> </a>
- <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50"
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50">
 </a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="50" height="50">
-  </a>                                                                                                                                                       
+</a>                                                                                                                                                
 <a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7"><img src="cv.png" width="100" height="100"</a>
 </p>
   </header>
