--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
    
   <p style="color: White; background-color: Black;">
-    <b>About </b> Hi I am Parth Sharma . Thanks For Visiting My Website . I am From Bilaspur H.P. <br>
+    <b>About :-</b> Hi I am Parth Sharma . Thanks For Visiting My Website . I am From Bilaspur H.P. <br>
     Copyright© 2025 All Rights Resirved 
 </p>
   </body>
