--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="50" height="50">
 </a>                                                                                                                                                
-<a href="https://drive.google.com/file/d/1FVOc2kI-rDzJhluAB2r5ib7"><img src="cv.png" width="100" height="100"</a>
+<a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/view?usp=drivesdk"><img src="cv.png" width="100" height="100"</a>
 </p>
   </header>
 </head> 
