--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
-  <p align="left">
+  <p align="center">
     All Social Links
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="200" height="150"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50">
@@ -15,11 +15,9 @@
   </header>
 </head> 
   <body>
-
-    
  <h1 align= "center"> Parth Sharma </h1>
     <h4>Education</h4>
-  <table border="1"
+
     <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
                                                                                                                     <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h4>Practical Knowledge </h4>
