--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 </head> 
   <body>
-<br><h1 align= "center"> Parth Sharma </h1>
+<p><h1 align= "center"> Parth Sharma </h1></p>
     <h4>Education</h4>
     <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
                                                                                                                     <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
