--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="200" height="150"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="50" height="50"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="50" height="50"></a>                                                                                                                                                
-<a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="50" height="50"
-                                                                               
-                                                                               0"</a>
+<a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="50" height="50"</a>
 </p>
   </header>
 </head> 
