--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
 <tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
-  <p align="center">
+  <p align="right">
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="300" height="100"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="100" height="100"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a>                                                                                                                                                
