--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 </head> 
   <body>
-    <h1 align= "center"> Parth Sharma </h1>
+    <h1 align= "center";style="colour:blue;"> Parth Sharma </h1>
     <h2>Education</h2>
     <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
                                                                                                                     <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
