--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="100" height="100"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a>                                                                                                                                                
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
+  <link rel="stylesheet" href="style.css">
 </p>
   </header>
 </head> 
