--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 <h2 align=left> Skills </h2>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-   
-  <p style="color: White; background-color: Black;">
-    <b>About :-</b> Hi I am Parth Sharma . Thanks For Visiting My Website . I am From Bilaspur H.P. <br>
+  <footer>
+    Thanksfor Visiting My Website
     Copyright© 2025 All Rights Resirved 
-</p>
+  </footer>
   </body>
 </html>
