--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 <h2 align=left> Skills </h2>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-  <footer>
+ <section class="footer">
+        <div class="footer-content">
     Thanksfor Visiting My Website
     Copyright© 2025 All Rights Resirved 
-  </footer>
+        </div>
+ </section>
   </body>
 </html>
