--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="100" height="100"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a>                                                                                                                                                
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
- 
 </p>
   </header>
 </head> 
    <link rel="stylesheet" href="style.css">
   <body>
+    <p>
     <h1 align= "center"> Parth Sharma </h1>
-    <h2>Education</h2>
+    <h2>Education</h2> </p>
     <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
                                                                                                                     <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h2>Practical Knowledge </h2>
