--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
- From 06-01-2024 To 25-01-2024</p>                                                        
+ From 06-01-2024 To 25-01-2024
+ Construction Site Civil Hospital Sundernagar</p>                                                        
 <h2 align=left> Skills </h2>
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
