--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
     <margine 8></margine>
-<tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
+<tittle align="Center"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="100" height="100"</a>
  
