--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <header>
     <margine 8></margine>
 <tittle align="Center"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
+    <div>
+    <input type="text" placeholder="Search...">
+    <button type="submit">Search</button>
+</div>
   <p align="right">
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="48" height="48"</a>
  
