--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=eng>
 <head>
   <header>
-    <margine 8></margine>
+    <m<img src="parthsankhyan.png" alt="Parth Sankhyan" style="width:100px;">
 <tittle align="Center"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
     <div>
     <input type="text" placeholder="Search...">
