--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
  <section class="footer">
         <div class="footer-content">
+          <form>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Your Message"
     Thanksfor Visiting My Website
     Copyright© 2025 All Rights Resirved 
         </div>
