--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <form>
     <input type="text" placeholder="Your Name" required>
     <input type="email" placeholder="Your Email" required>
-    <textarea placeholder="Your Message"
+    <textarea placeholder="Your Message">
+    </form>
     Thanksfor Visiting My Website
     Copyright© 2025 All Rights Resirved 
         </div>
