--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
     <p>
     <h1 align= "center"> Parth Sharma </h1>
     <h2>Education</h2> </p>
-    <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
-                                                                                                                    <p> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
+    <div class="bordered">
+      <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
+    </div>                                                                                                          <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h2>Practical Knowledge </h2>
+       <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
  <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
  From 06-01-2024 To 25-01-2024
- Construction Site Civil Hospital Sundernagar</p>                                                        
+ Construction Site Civil Hospital Sundernagar</p>   
+       </div>
 <h2 align=left> Skills </h2>
+     <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
- <section class="footer">
+  <div class="bordered">
+       <section class="footer">
         <div class="footer-content">
           <form>
     <input type="text" placeholder="Your Name" required>
