--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 align= "center"> Parth Sharma </h1>
     <h2>Education</h2> </p>
     <div class="bordered">
-      <p align="center"><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
+      <p ><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
     </div>                                                                                                          <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
 <h2>Practical Knowledge </h2>
        <div class="bordered">
@@ -36,7 +36,7 @@
 <h2 align=left> Skills </h2>
      <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
-  <p align="left"> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
+  <p> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
   <div class="bordered">
        <section class="footer">
         <div class="footer-content">
