--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <h2>Education</h2> </p>
     <div class="bordered">
       <p ><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
-    </div>                                                                                                          <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P<p/>
+         <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P</p>
+    </div>
 <h2>Practical Knowledge </h2>
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
@@ -37,6 +38,7 @@
      <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
+     </div>
   <div class="bordered">
        <section class="footer">
         <div class="footer-content">
