--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
     <br>
        <section class="footer">
         <div class="footer-content">
-      
-    Thanksfor Visiting My Website
+    Thanks for Visiting My Website <br>
     Copyright© 2025 All Rights Resirved 
         </div>
-         
  </section>
   </body>
 </html>
