--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang=eng>
 <head>
   <header>
-    <m<img src="parthsankhyan.png" alt="Parth Sankhyan" style="width:100px;">
-<tittle align="Center"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
+<tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="48" height="48"</a>
- 
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="48"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="48" height="48"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a>                                                                                                                                                
