--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=eng>
 <head>
   <header>
-<tittle align="Left"><h2>Welcome To Parth Sharma Portfolio Website </h2></tittle>
+<tittle align="Left"><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </h2></tittle>
   <p align="right">
 <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="48" height="48"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="48"> </a>
