--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-<tittle align="Left"><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </h2></tittle>                                                                                                                                      
+<tittle align="Left"><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </h2></tittle>  
+    <p align right> <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
+<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="34"> </a>
+ <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="34" height="34"></a> 
+<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="34" height="34"> </a>
+    </a> </p>
   </header>
 </head> 
    
@@ -38,10 +43,6 @@
         </div>
           <div class="social-links">
             <p align= "Right">
-    <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
-<a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="34"> </a>
- <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="34" height="34"></a> 
-<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="34" height="34"> </a>
             </p>
         </div>
  </section>
