--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
     <>br
        <section class="footer">
         <div class="footer-content">    
+          Contact Me <a href ="mailto:parthsankhyanofficial@gmail.com">here</a><br>
     Thanks for Visiting My Website <br>
-    Copyright© 2025 All Rights Resirved<br>
-        </div>
-          <div class="social-links">
-            <p align= "Right">
+    Copyright© 2025 All Rights Reserved
+        
             </p>
         </div>
  </section>
   </body>
 </html>
-00
