--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
       <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
-      <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P</p>
+      <p align=center"> Diploma In Civil Engineering <br> From Govt Polytechnic Kinnaur </br>At Govt Polytechnic Rohru distt Shimla H.P</p>
     </div>
     <br>
 <h2 style="color: Blue;">Practical Knowledge </h2>
