--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    
   <body>
     <p>
-    <h1 align= "center";style="color: red;"> Parth Sharma </h1>
+    <h1> <p align= "center";style="color: red;"> Parth Sharma</p> </h1>
     <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
       <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
