--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-<tittle align="Left"><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </h2></tittle>  
+<tittle align="Left"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
     <p align right>
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="34"> </a>
@@ -14,7 +14,7 @@
 </head> 
    
   <body>
-    <h1 style="color: Red;">Parth Sharma</p> </h1>
+    <h1 style="color: Red;align=Center">Parth Sharma</p> </h1>
     <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
       <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
