--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head> 
    
   <body>
-    <h1 style="color: Red;align=Center">Parth Sharma</p> </h1>
+    <h1 style="color: Red;align="Center";>Parth Sharma</p> </h1>
     <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
       <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
