--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <b>
           Contact Me :- parthsankhyanofficial@gmail.com<br>
     Thanks for Visiting My Website <br>
-    Copyright© 2025 All Rights Reserved
+    Copyright© 2025 All Rights Reserved <p style="color: Blue;"> Parth Sharma </p>
           </b>
         </div>
  </section>
