--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="34" height="34"></a> 
 <a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="48" height="48"> </a>
     </a> </div>
+       <button onclick="topFunction()" id="toTheTopButton" title="Go to top">↑</button>
   </header>
 </head> 
    
