--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.py">
+    <link rel="stylesheet" href="Script.py">
 <tittle align="Left"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
      <div class="social-links">
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
