--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <header>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Script.py">
 <tittle align="Left"><b><style>font size 40px</style>Welcome To Parth Sharma Portfolio Website </b></h2></tittle>  
      <div class="social-links">
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
@@ -36,6 +35,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
+     <link rel="stylesheet" href="script.py">
        <section class="footer">
         <div class="footer-content">   
           <b>
