--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <br>
 <h2 style="color: Blue;"> Skills </h2>
 <div class="bordered">
-  <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
+  <p align="center"><a href="https://www.microsoft.com/en/microsoft-365/excel?market=af/"target=blank"<img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
        <section class="footer">
